--- a/Tasks/app/src/main/res/layout/fragment_tasks.xml
+++ b/Tasks/app/src/main/res/layout/fragment_tasks.xml
@@ -31,19 +31,13 @@
             android:text="@string/save_task"
             android:onClick="@{() -> tasksViewModel.addTask()}"/>
 
-        <!--
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{tasksViewModel.tasksString}"/>
-        -->
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tasks_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="top"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2" />
     </LinearLayout>
 </layout>
